--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Lanthing</string>
     <string name="device_id">Device ID</string>
     <string name="access_code">Access Code</string>
+    <string name="logging">Logging</string>
 </resources>
